--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/fancyday_logo.jpg') no-repeat center;
+    background: url('/media/fancyday_logo_small.jpg') no-repeat center;
     background-size: cover;
     height: 800px;
     background-size: cover;
