--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,12 +3,11 @@ html {
 }
 
 body {
-    background: url('/media/fancyday_logo_small.jpg') no-repeat center;
-    background-size: cover;
-    height: 800px;
-    background-size: cover;
-    margin-bottom: 4.5rem;
-    height: 90vh;
+	background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+	background-size: cover;
+    height: calc(100vh - 164px);
+    color: #555;
+    font-family: "Lato";
 }
 
 /* from Bulma */
@@ -57,7 +56,11 @@ body {
     border: 1px solid black !important;
 }
 
-/* -------------------------------- Media Queries */
+.bg-black {
+    background: #000 !important;
+}
+
+/* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
