added product apps and models

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,6 +8,7 @@
                 <a href="" class="dropdown-item">Balloons 0-9</a>
                 <a href="" class="dropdown-item ">Balloons A-Z</a>
                 <a href="" class="dropdown-item ">Custom Made Balloons</a>
+                <a href="" class="dropdown-item ">More Balloons</a>
                 <a href="" class="dropdown-item">All Products</a>
             </div>
         </li>
