added product details

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,7 +9,7 @@
                 <a href="" class="dropdown-item ">Balloons A-Z</a>
                 <a href="" class="dropdown-item ">Custom Made Balloons</a>
                 <a href="" class="dropdown-item ">More Balloons</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
