--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,27 +5,27 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">Balloons 0-9</a>
-                <a href="" class="dropdown-item ">Balloons A-Z</a>
-                <a href="" class="dropdown-item ">Custom Made Balloons</a>
-                <a href="" class="dropdown-item ">More Balloons</a>
+                <a href="{% url 'products' %}?category=balloons_0-9" class="dropdown-item">Balloons 0-9</a>
+                <a href="{% url 'products' %}?category=balloonsa_-z" class="dropdown-item ">Balloons A-Z</a>
+                <a href="{% url 'products' %}?category=custom_made_balloons" class="dropdown-item ">Custom Made Balloons</a>
+                <a href="{% url 'products' %}?category=more_balloons" class="dropdown-item ">More Balloons</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
-        <li class="nav-item dropdown">
+        <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About
             </a>
         </li>
 
-        <li class="nav-item dropdown">
+        <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Blog
             </a>
         </li>
 
-        <li class="nav-item dropdown">
+        <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Contact
             </a>
