--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,7 +6,7 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?category=balloons_0-9" class="dropdown-item">Balloons 0-9</a>
-                <a href="{% url 'products' %}?category=balloonsa_-z" class="dropdown-item ">Balloons A-Z</a>
+                <a href="{% url 'products' %}?category=balloons_a-z" class="dropdown-item ">Balloons A-Z</a>
                 <a href="{% url 'products' %}?category=custom_made_balloons" class="dropdown-item ">Custom Made Balloons</a>
                 <a href="{% url 'products' %}?category=more_balloons" class="dropdown-item ">More Balloons</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
