--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,8 @@
     {% block postloadjs %}
     {% endblock %}
 
-    
+   <!-- Footer -->
+   {% include 'includes/footer.html' %}
+   
   </body>
 </html>
