--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -22,13 +22,13 @@
                     <h6 class="title">Social Media:</h6>
                         <ul class="list-inline">
                             <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank">
-                                <i class="fab fa-facebook" aria-hidden="true"></i>
+                                <i class="footer-link fab fa-facebook" aria-hidden="true"></i>
                                     <span class="sr-only">Facebook</span></a></li>
                             <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank">
-                                <i class="fab fa-instagram" aria-hidden="true"></i>
+                                <i class="footer-link fab fa-instagram" aria-hidden="true"></i>
                                     <span class="sr-only">Instagram</span></a></li>
                             <li class="list-inline-item"><a href="https://www.twitter.com" target="_blank">
-                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                                <i class="footer-link fab fa-twitter" aria-hidden="true"></i>
                                     <span class="sr-only">Twitter</span></a></li>
                         </ul>
                 </div>
