--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -14,7 +14,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="% url 'about' %}" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About
             </a>
         </li>
