changed home page layout

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,26 +2,20 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <div id="homepage-header">
         <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
-{% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    Wanted products
-                </h1>
-                <div class="my-5">
-                    <h4>
+            <div class="col-7 col-md-6">
+            </div>
+            <div class="col-12">
+                <div class="header-content ml-auto">
+                    <div class="header-text">
+                        <h1 id="home-header-h1">Fancy Day Design</h1>
+                        <p id="home-header-line">'A special moment deserves a Fancy Day Design'</p>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
