modified and added carousel to homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,20 +2,32 @@
 {% load static %}
 
 {% block page_header %}
-    <div id="homepage-header">
+<!--- Hero image and text --->
+<div id="homepage-header">
+    <div class="container">
         <div class="row">
             <div class="col-7 col-md-6">
             </div>
             <div class="col-12">
                 <div class="header-content ml-auto">
                     <div class="header-text">
-                        <h1 id="home-header-h1">Fancy Day Design</h1>
+                        <h1 id="home-header-h1">Fancy Day Design
+                        </h1>
                         <p id="home-header-line">'A special moment deserves a Fancy Day Design'</p>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                     </div>
                 </div>
             </div>
+            <div class="my-5">
+                <h4>
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                </h4>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
+{% block content %}
+    {% include 'home/includes/home-section-1.html' %}
+    {% include 'home/includes/home-section-2.html' %}
+{% endblock %}
