--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,32 +1,32 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
+            <a class="nav-link text-black mr-5 logo-font" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?category=balloons_0-9" class="dropdown-item">Balloons 0-9</a>
                 <a href="{% url 'products' %}?category=balloons_a-z" class="dropdown-item ">Balloons A-Z</a>
                 <a href="{% url 'products' %}?category=custom_made_balloons" class="dropdown-item ">Custom Made Balloons</a>
                 <a href="{% url 'products' %}?category=more_balloons" class="dropdown-item ">More Balloons</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item"> All Products</a>
             </div>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="% url 'about' %}" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link text-black mr-5 logo-font" href="{% url 'about' %}" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link text-black mr-5 logo-font" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Blog
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link text-black mr-5 logo-font" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Contact
             </a>
         </li>
