--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -14,19 +14,18 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-black mr-5 logo-font" href="{% url 'about' %}" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                About
+            <a href="{% url 'about' %}" class="nav-link text-black mr-5 logo-font">About
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-black mr-5 logo-font" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="" class="nav-link text-black mr-5 logo-font">
                 Blog
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-black mr-5 logo-font" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="" class="nav-link text-black mr-5 logo-font">
                 Contact
             </a>
         </li>
