--- a/static/css/base.css
+++ b/static/css/base.css
@@ -334,6 +334,23 @@ sort-select-wrapper {
     text-align: center;
 }
 
+/*------ bootstrap toasts  ------*/
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /*------ Footer ------*/
 
 footer {
