--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -61,7 +61,7 @@ select option[value=""] {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #c19c77;;
+    background: rgba(241, 193, 137, 0.85);
     z-index: 9999;
 }
 
