Working on my profile page/ had to save cause my computer began to crash

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -23,6 +23,11 @@
 .stripe-style-input::placeholder {
     color: #aab7c4;
 }
+/*--------- Checkout  ---------*/
+
+.text-info {
+    color: #c19c77;
+}
 
 /*------ Checkout success ------*/
 
