--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,9 +1,14 @@
+.order-history {
+    max-height: 416px; /* height of profile form + submit button */
+    overflow-y: auto;
+}
+
 #profile-update-form .form-control {
     color: #000;
 }
 
 #profile-update-form input::placeholder {
-    color: #aab7c4;
+    color: grey;
 }
 
 #id_default_country,
@@ -12,5 +17,5 @@
 }
 
 #id_default_country option:first-child {
-    color: #aab7c4;
+    color: grey;
 }
