--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
 
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -16,12 +15,11 @@
 
 {% block content %}
     <div class="overlay"></div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col text-center mt-3">
-                    <h2 class="logo-font">My Profile</h2>
-                        <hr class="w-50 mb-1">
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col text-center mt-3">
+                <h2 class="logo-font mb-4">My Profile</h2>
+                <hr class="w-50 mb-1">
             </div>
         </div>
         <div class="row">
