modified allauth templates

--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -6,8 +6,8 @@
 
 {% block inner_content %}
 
-<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
-<hr>
+<h2 class="logo-font text-center mb-4">{% trans "Account Inactive" %}</h2>
+<hr class="w-50 mb-1">
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
