--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}s
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+    <h2 class="logo-font text-center mb-4">{% trans "Change Password" %}</h2>
+    <hr class="w-50 mb-1">
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
