--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,7 +4,8 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+    <h2 class="logo-font text-center mb-4">{% trans "Change Password" %}</h2>
+    <hr class="w-50 mb-1">
+    
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
