--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,10 +14,9 @@
     <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row">
-            <div class="col">
-                <hr>
+            <div class="col text-center">
                 <h2 class="logo-font mb-4">Shopping Bag</h2>
-                <hr>
+                <hr class="w-50 mb-1">
             </div>
         </div>
 
