--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,8 +7,8 @@
 
 
 {% block inner_content %}
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
-<hr>
+<h2 class="logo-font text-center mb-4">{% trans "Confirm E-mail Address" %}</h2>
+<hr class="w-50 mb-1">
 
 {% if confirmation %}
 
