--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,8 +7,8 @@
 
 {% block inner_content %}
 
-<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
-<hr>
+<h2 class="logo-font text-center mb-4">{% trans "Sign In" %}</h2>
+<hr class="w-50 mb-1">
 
 {% get_providers as socialaccount_providers %}
 
