--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
-  <h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
-  <hr>
+  <h2 class="logo-font text-center mb-4">{% trans "Sign Out" %}</h2>
+  <hr class="w-50 mb-1">
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
