--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,8 +6,8 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
+    <h2 class="logo-font text-center mb-4">{% trans "Password Reset" %}</h2>
+    <hr class="w-50 mb-1">
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
