--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
-    <hr>
+    <h2 class="logo-font text-center mb-4">{% trans "Set Password" %}</h2>
+    <hr class="w-50 mb-1">
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
