--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block inner_content %}
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
-<hr>
+<h2 class="logo-font text-center mb-4">{% trans "Sign Up" %}</h2>
+<hr class="w-50 mb-1">
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
