--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h2>
-    <hr>
+    <h2 class="logo-font text-center mb-4">{% trans "Sign Up Closed" %}</h2>
+    <hr class="w-50 mb-1">
 
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
