--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block inner_content %}
-<h2 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h2>
-<hr>
+<h2 class="logo-font text-center mb-4">{% trans "Verify Your E-mail Address" %}</h2>
+<hr class="w-50 mb-1">
 
 {% url 'account_email' as email_url %}
 
