added contact page

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -25,9 +25,10 @@
         </li>
 
         <li class="nav-item">
-            <a href="" class="nav-link text-black mr-5 logo-font">
+            <a href="{% url 'contact' %}" class="nav-link text-black mr-5 logo-font">
                 Contact
             </a>
         </li>
+        
     </ul>
 </div>
