--- a/static/css/base.css
+++ b/static/css/base.css
@@ -492,7 +492,7 @@ footer p {
 }
 
 .allauth-form-inner-content input {
-    border-color: #000;
+    border-color: #231f20;
     border-radius: 0;
 }
 
@@ -517,7 +517,7 @@ footer p {
     -ms-user-select: none;
     user-select: none;
     background-color: #c19c77;
-    border: 1px solid #000;
+    border: 1px solid #231f20;
     padding: .375rem .75rem;
     font-size: 1rem;
     line-height: 1.5;
@@ -530,8 +530,8 @@ footer p {
 .allauth-form-inner-content button:hover,
 .allauth-form-inner-content input[type='submit']:hover {	
 	color: #fff9f9;
-    background-color: #222;
-    border-color: #222;
+    background-color: #231f20;
+    border-color: #231f20;
 }
 
 .allauth-form-inner-content a {
