--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-3 order-lg-2">
                         <a href="" class="footer-link">Blog</a>
-                        <a href="" class="footer-link mb-15-mob">Contact</a>
+                        <a href="{% url 'contact' %}" class="footer-link mb-15-mob">Contact</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-2 order-lg-3 mt-2">
                         <p class="footer">© Fancy Day Design 2021</p>
