--- a/home/templates/home/includes/home-section-2.html
+++ b/home/templates/home/includes/home-section-2.html
@@ -2,7 +2,7 @@
 <!--- Header Text --->
 <div class="container-fluid div-section">
     <div class="container hp-section-3-heading mt-5">
-        <h2 class="home-decor">Review</h2>
+        <h2 class="home-decor">My Testimonials</h2>
     </div>
 
 
