--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -20,8 +20,7 @@
         </div>
     </div>
     <div class="container">
-        <img src="/media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3">
-            
+        <img src="/media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3"> 
     </div>
 <!-- Intro Contact Page -->
     <section>
@@ -41,9 +40,7 @@
             </div>
         </div>
     </section>
-
-<!-- Contact Form -->
-<!--- Form is taken from W3 schools https://www.w3schools.com/howto/howto_css_contact_form.asp --->
+<!--- Contact Form is taken from W3 schools https://www.w3schools.com/howto/howto_css_contact_form.asp --->
     <div class="container">
         <h2 class="contact-heading mt-5 text-center">Contact Form</h2>
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
