added blog page content - not working

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,7 +19,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="" class="nav-link text-black mr-5 logo-font">
+            <a href="{% url 'post' %}" class="nav-link text-black mr-5 logo-font">
                 Blog
             </a>
         </li>
