--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -60,5 +60,5 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript" src="{% static 'contact/js/email.js' %}"></script>
+<script type="text/javascript" src="{% static '/contact/js/email.js' %}"></script>
 {% endblock %}
