--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -71,6 +71,8 @@
             </div>
         </div>
     </div>
+
+{% include 'reviews/includes/reviews.html' %}
 {% endblock %}
 
 {% block postloadjs %}
