added title tabs on product, bag and checkout page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -338,7 +338,7 @@ sort-select-wrapper {
     text-align: center;
 }
 
-/*------ bootstrap toasts  ------*/
+/*------ Toasts  ------*/
 
 .message-container {
     position: fixed;
