--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -23,6 +23,24 @@
                 <hr>
             </div>
         </div>
+<!--- Title Tabs --->
+<div class="container">
+    <div class="row shop-top-row">
+        <div class="col-12">
+            <div class="title_tabs">
+                <p class="title_tabs-text">
+                    <a href="{% url 'home' %}" class="tabs-link">Home</a>
+                    |
+                    <a href="{% url 'products' %}" class="tabs-link">Shop</a>
+                    |
+                    <a href="{% url 'view_bag' %}" class="tabs-link">Shopping cart</a>
+                    |
+                    <span class="active-tabs">Checkout</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
