--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -7,6 +7,16 @@
             <div class="col"></div>
         </div>
     </div>
+    <div class="container">
+        <div class="row shop-top-row">
+            <div class="col-sm-6 col-12">
+                {% include 'products/includes/title_tabs.html' %}
+            </div>
+            <div class="col-sm-6 col-12">
+                {% include 'products/includes/dropdown_sort_products.html' %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
